<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".views.home.addGroupActivity.AddNewGroupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_gravity="center_vertical|start"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_back" />


                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginStart="48dp"
                    android:text="@string/addNewGroupTitle"
                    android:textAppearance="?textAppearanceBody1" />

            </FrameLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/chooseOneColor"
            android:textAppearance="?textAppearanceBody2"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/colorSelectionRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/groupTitleIl"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:hint="@string/enterGroupTitle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/groupTitleEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />

        </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/addImageBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        />

    <ImageView
        android:id="@+id/imageItem"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>


</LinearLayout>


    </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/saveNewGroupBtn"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            app:icon="@drawable/ic_round_save_24"

            />





</androidx.coordinatorlayout.widget.CoordinatorLayout>