<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"

    tools:context=".views.TaskList.addTask.AddNewTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical|start"
                    android:background="?selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_back" />


                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginStart="48dp"
                    android:textAppearance="?textAppearanceBody1"
                    tools:text="@string/addNewTask" />
            </FrameLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/addTaskTitle"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textSize="18sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/des_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="30"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/desEditEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/addTaskDescription"
                    android:singleLine="true"

                    android:textColor="@color/blue"
                    android:textSize="18sp"

                    />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_layout"
                app:startIconDrawable="@drawable/ic_baseline_date_range_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:textColor="@color/blue"

                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/grid_layout" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/chooseOneColor"
                android:layout_marginStart="4dp"
                android:textAppearance="?textAppearanceBody2"
                app:layout_constraintStart_toStartOf="@+id/des_layout"
                app:layout_constraintTop_toBottomOf="@+id/date_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colorSelectionRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />




        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/saveNewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="32dp"
        tools:icon="@drawable/ic_round_add_24"
        tools:text="@string/addNewTask" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>