<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    >

    <FrameLayout
        android:id="@+id/select_group_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/chooseGroup"
            android:textAppearance="?textAppearanceSubtitle1"
            android:layout_marginStart="12dp"


            />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/newGroupIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?selectableItemBackground"
        android:gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_group_toolbar">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_outline_add_circle_outline_24" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/clickForAddNewGroup"

            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_group_toolbar" />


    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGroupIcon"
        android:layout_marginTop="8dp"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSelectGroups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/select_group_item"
            app:layout_constraintTop_toBottomOf="@+id/view2"/>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dismissTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_marginBottom="8dp"
        android:textColor="@color/blue"
        app:cornerRadius="8dp"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nestedScrollView"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>