<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"

            android:layout_marginEnd="42dp"
            android:background="@drawable/et_search"
            android:drawableRight="@drawable/ic_baseline_search_24"
            android:drawablePadding="4dp"
            android:hint="@string/search"

            android:paddingStart="8dp"
            android:paddingEnd="40dp"
            android:textAppearance="?textAppearanceBody2"
            android:textDirection="rtl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/searchCancelBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:background="?selectableItemBackgroundBorderless"
            app:srcCompat= "@drawable/ic_outline_cancel_24"
            android:layout_marginEnd="52dp"
            android:visibility="gone" />


    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearAllBtn"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/ic_round_delete_forever_24"
        android:text="@string/clearAll"
        android:textSize="12sp"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearAllBtn">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"

            android:background="?dividerColor" />

        <TextView
            android:id="@+id/currentTimeTv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.75"
            android:gravity="center"
            android:textAppearance="?textAppearanceBody2"
            tools:text="عصر بخیر" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?dividerColor" />


    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/groupRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="64dp"
            android:clipToPadding="false"
            tools:listitem="@layout/group_item"
             />

        <include layout="@layout/view_default_empty_state"
            android:id="@+id/calendarEmptyState"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
    </FrameLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addNewGroupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNewGroup"
        app:icon="@drawable/ic_round_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>